Fix tooltip z-index issue

--- a/src/styles/global/_tooltip.scss
+++ b/src/styles/global/_tooltip.scss
@@ -8,6 +8,8 @@
   opacity: 1 !important;
   box-shadow: 0 4px 16px 2px rgba($base-color, 0.08);   // Elevation Index: 2
   border-radius: $base-border-radius;
+  z-index: 1;
+
   &.place-top {
     &:after {
     border-top-color: #fff !important;
